@@ -551,10 +551,7 @@ def install_apk(name, url):
     
     ##########################################
     # KODI-RD-IL
-    use_downloader_app = False
-    # if check_if_downloader_app_installed() and use_manager == 'com.esaba.downloader':
     if use_manager == 'com.esaba.downloader':
-        use_downloader_app = True
         # Override configured path to Downloader files location
         path = '/storage/emulated/0/Download/Downloader/'
     ##########################################
@@ -605,8 +602,8 @@ def install_apk(name, url):
         
         ##########################################
         # KODI-RD-IL
-        downloader_installed_text = '\n[B]כעת תיפתח אפליקציית Downloader, יש להתקין את ה-APK מתוך הלשונית Files. שים לב! אם הקובץ לא מופיע שם ואתה בגרסת אנדרואיד 11 ומעלה, הגדר מנהל קבצים אחר ויעבוד.[/B]' if use_downloader_app else f'\n[B]כעת ייפתח מנהל הקבצים שהגדרת:\n{use_manager}[/B]'
-        dialog.ok(CONFIG.ADDONTITLE, f'הקובץ [COLOR {CONFIG.COLOR1}]{apk}[/COLOR] ירד בהצלחה לנתיב:\n[COLOR {CONFIG.COLOR1}]{path}[/COLOR]{downloader_installed_text}')
+        use_manager_text = f'\n[B]כעת ייפתח מנהל הקבצים שהגדרת:\n{use_manager}[/B]'
+        dialog.ok(CONFIG.ADDONTITLE, f'הקובץ [COLOR {CONFIG.COLOR1}]{apk}[/COLOR] ירד בהצלחה לנתיב:\n[COLOR {CONFIG.COLOR1}]{path}[/COLOR]{use_manager_text}')
         ##########################################
         
         
