@@ -1,0 +1,118 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<window>
+    <coordinates>
+        <left>110</left>
+        <top>55</top>
+    </coordinates>
+    <controls>
+        <control type="group">
+            <control type="image">
+                <left>0</left>
+                <top>0</top>
+                <width>1700</width>
+                <height>970</height>
+                <texture border="2">Background/ContentPanel.png</texture>
+            </control>
+            <control type="image" id="101">
+                <left>10</left>
+                <top>10</top>
+                <width>1680</width>
+                <height>950</height>
+            </control>
+            <control type="label" id="102">
+                <posx>20</posx>
+                <posy>20</posy>
+                <width>1660</width>
+                <height>60</height>
+                <font>font13</font>
+                <label></label>
+                <align>center</align>
+                <aligny>center</aligny>
+                <visible>Skin.String(headertexttype)</visible>
+            </control>
+            <!-- KODI-RD-IL Icon - resources\kodi_rd_israel_art\kodi_rd_il_icon.png -->
+            <control type="image" id="103">
+                <centerleft>44%</centerleft>
+                <top>74%</top>
+                <width>170</width>
+                <height>170</height>
+                <aspectratio aligny="center" align="center">keep</aspectratio>
+                <visible>Skin.String(headerimagetype)</visible>
+            </control>
+            <!-- KODI-RD-IL APK Downloader code -->
+            <control type="image">
+                <centerleft>46%</centerleft>
+                <top>-10%</top>
+                <width>1300</width>
+                <height>1300</height>
+                <aspectratio aligny="center" align="center">keep</aspectratio>
+                <texture>Background/apk_downloader_code.png</texture>
+            </control>
+            <!-- -------------------------------------------------------------- -->
+            <control type="textbox" id="104">
+                <left>27</left>
+                <top>85</top>
+                <width>1597</width>
+                <height>740</height>
+                <font>font36_title</font>
+                <align>right</align>
+                <aligny>top</aligny>
+                <colordiffuse>FFFF00FF</colordiffuse>
+                <!-- <pagecontrol>105</pagecontrol> -->
+            </control>
+            <!-- <control type="scrollbar" id="105"> -->
+                <!-- <left>1660</left> -->
+                <!-- <top>90</top> -->
+                <!-- <width>30</width> -->
+                <!-- <height>790</height> -->
+                <!-- <subtype>text</subtype> -->
+                <!-- <visible>true</visible> -->
+                <!-- <texturesliderbackground>Button/scrollbar-V-background.png</texturesliderbackground> -->
+                <!-- <texturesliderbar>Button/scrollbar-V.png</texturesliderbar> -->
+                <!-- <texturesliderbarfocus colordiffuse="FF12B2E7">Button/scrollbar-V-focus.png</texturesliderbarfocus> -->
+                <!-- <orientation>vertical</orientation> -->
+                <!-- <showonepage>true</showonepage> -->
+                <!-- <onup>201</onup> -->
+                <!-- <ondown>201</ondown> -->
+                <!-- <onleft>201</onleft> -->
+                <!-- <onright>201</onright> -->
+            <!-- </control> -->
+        </control>
+        <control type="group">
+            <control type="button" id="201">
+                <left>1280</left>
+                <top>860</top>
+                <width>320</width>
+                <height>80</height>
+                <font>font14</font>
+                <textcolor>FFF0F0F0</textcolor>
+                <label>[B]קדימה[/B]</label>
+                <align>center</align>
+                <aligny>center</aligny>
+                <texturefocus colordiffuse="FF12B2E7">Button/testbuttonfo.png</texturefocus>
+                <texturenofocus>Button/testbuttonnf.png</texturenofocus>
+                <!-- <onleft>202</onleft> -->
+                <!-- <onright>202</onright> -->
+                <!-- <onup>105</onup> -->
+                <!-- <ondown>105</ondown> -->
+            </control>
+            <!-- <control type="button" id="202"> -->
+                <!-- <left>1380</left> -->
+                <!-- <top>890</top> -->
+                <!-- <width>300</width> -->
+                <!-- <height>60</height> -->
+                <!-- <font>font13</font> -->
+                <!-- <textoffsetx>20</textoffsetx> -->
+                <!-- <label>הזכר לי מאוחר יותר</label> -->
+                <!-- <align>center</align> -->
+                <!-- <aligny>center</aligny> -->
+                <!-- <texturefocus colordiffuse="FF12B2E7">Button/testbuttonfo.png</texturefocus> -->
+                <!-- <texturenofocus>Button/testbuttonnf.png</texturenofocus> -->
+                <!-- <onleft>201</onleft> -->
+                <!-- <onright>201</onright> -->
+                <!-- <onup>105</onup> -->
+                <!-- <ondown>105</ondown> -->
+            <!-- </control> -->
+        </control>
+    </controls>
+</window>
