@@ -159,27 +159,6 @@ def auto_quick_update():
                 CONFIG.set_setting('notedismiss', 'true')
                 return
             Wizard().force_close_kodi_in_5_seconds(dialog_header="עדכון מהיר הסתיים בהצלחה")
-            
-def apk_update_prompt():
-    try:
-        LATEST_APK_VERSION = float(tools.open_url(CONFIG.LATEST_APK_VERSION).text)
-        is_new_apk_version_available = LATEST_APK_VERSION > CONFIG.KODIV
-        
-        if is_new_apk_version_available:
-        
-            APK_DOWNLOADER_CODE = int(tools.open_url(CONFIG.APK_DOWNLOADER_CODE).text)
-            dialog = xbmcgui.Dialog()
-            
-            yes_pressed = dialog.yesno(CONFIG.ADDONTITLE,
-                               f'[COLOR yellow][B]קיים עדכון גרסה לאפליקציה שלנו![/B][/COLOR]\nגרסת קודי נוכחית: [B][COLOR red]{CONFIG.KODIV}[/COLOR][/B] | גרסת קודי מעודכנת: [B][COLOR limegreen]{LATEST_APK_VERSION}[/COLOR][/B]\nבאפשרותך להתקין דרך אפליקציית Downloader עם הזנת הקוד: [B]{APK_DOWNLOADER_CODE}[/B], או ללחוץ "עדכן" ולהוריד את האפליקציה המעודכנת ישירות.',
-                               nolabel='[B][COLOR red]מאוחר יותר[/COLOR][/B]',
-                               yeslabel='[B][COLOR springgreen]עדכן[/COLOR][/B]')
-                               
-            if yes_pressed:
-                url = f'plugin://{CONFIG.ADDON_ID}/?mode=apk'
-                xbmc.executebuiltin('ActivateWindow(Programs, {0}, return)'.format(url))
-    except:
-        pass
 
 
 def installed_build_check():
@@ -463,9 +442,10 @@ else:
     logging.log("[Current Build Check] Build Installed: {0}".format(CONFIG.BUILDNAME), level=xbmc.LOGINFO)
     
 # KOD-RD-IL - New APK version check on startup
+# xbmc.executebuiltin(f"RunPlugin(plugin://{CONFIG.ADDON_ID}/?mode=install&action=apk_update_check&apk_update_check_manual=False)")
 if tools.platform() == 'android' and CONFIG.get_setting('buildname') and not xbmc.Player().isPlaying():
-    apk_update_prompt()
-
+    from resources.libs.wizard import apk_update_check
+    apk_update_check(apk_update_check_manual="false")
 
 
 # INSTALLED BUILD CHECK
